# cmake_test

./: CMakeLists.txt  README.md  main.cpp
include/: hello.h
src/: hello.cpp
